--- a/locale/german.json
+++ b/locale/german.json
@@ -35,5 +35,92 @@
     "error_no_team": "❌ Das Team konnte ich nicht finden. Probier stattdessen mal `rot`, `blau` oder `gelb`",
     "error_no_code_set": "❌ Dieser Spieler hat noch keinen Trainercode gesetzt",
     "error_wrong_code_format": "❌ Das Format konnte ich nicht erkennen. Probier stattdessen mal `1234 1234 1234`",
-    "error_name_not_scanned": "😦 Ich konnte deinen Namen leider nicht finden. Entweder warst du in letzter Zeit in keiner Arena oder du hast den Namen falsch geschrieben"
+    "error_name_not_scanned": "😦 Ich konnte deinen Namen leider nicht finden. Entweder warst du in letzter Zeit in keiner Arena oder du hast den Namen falsch geschrieben",
+    "error_user_not_linked": "❌ Dieser Spieler hat sich noch nicht mit einem Pokémon GO Profil gelinkt",
+    "dot": ".",
+    "stats_title": "{}'s Stats",
+    "stats_placeholder": "Wähle eine Kategorie",
+    "stats_category_general": "Allgemein",
+    "stats_category_general_desc": "Wichtige Stats",
+    "stats_category_battles": "Kämpfe",
+    "stats_category_battles_desc": "Raid-, PVP- und Arenakämpfe",
+    "stats_category_collection": "Sammlungen",
+    "stats_category_collection_desc": "Pokédex, Gefangene Typen, und Bestimmte",
+    "stats_category_misc": "Anderes",
+    "stats_category_misc_desc": "Unwichtige Stats",
+    "stats_title_raids": "Raids",
+    "stats_title_pvp": "PVP",
+    "stats_title_team_rocket": "Team Rocket",
+    "stats_title_gyms": "Arenen",
+    "stats_title_dex": "Pokédexe",
+    "stats_title_specific": "Bestimmtes",
+    "stats_title_types": "Gefangene Typen",
+    "stats_xp": "XP",
+    "stats_km_walked": "KM gelaufen",
+    "stats_caught_pokemon": "Pokémon gefangen",
+    "stats_stops_spun": "Stops gedreht",
+    "stats_evolved": "Entwickelt",
+    "stats_hatched": "Eier ausgebrütet",
+    "stats_quests": "Quests erledigt",
+    "stats_trades": "Getauscht",
+    "stats_unique_stops_spun": "Einzigartige Stops",
+    "stats_best_friends": "Beste Freunde",
+    "stats_battles_won": "Insgesamt gewonnene Kämpfe",
+    "stats_normal_raids_won": "Normale Raids",
+    "stats_legendary_raids_won": "Legendäre Raids",
+    "stats_raids_with_friends": "Raids mit Freunden",
+    "stats_raid_achievements": "Raid Erfolge",
+    "stats_unique_raid_bosses": "Verschiedene Raidbosse",
+    "stats_grunts_defeated": "Rüpel besiegt",
+    "stats_giovanni_defeated": "Giovanni besiegt",
+    "stats_purified": "Erlöst",
+    "stats_gym_battles_won": "Arenakämpfe gewonnen",
+    "stats_berries_fed": "Beeren gefüttert",
+    "stats_hours_defended": "Stunden verteidigt",
+    "stats_trainings_won": "Trainiert",
+    "stats_league_great_won": "Superliga gewonnen",
+    "stats_league_ultra_won": "Hyperliga gewonnen",
+    "stats_league_master_won": "Meisterliga gewonnen",
+    "stats_gbl_rank": "GBL Rang",
+    "stats_gbl_rating": "GBL Rating",
+    "stats_best_buddies": "Beste Kumpel",
+    "stats_mega_evos": "Mega-Entwicklungen",
+    "stats_collections_done": "Sammler-Herausforderungen abgeschlossen",
+    "stats_unique_mega_evos": "Verschiedene Mega-Entwicklungen",
+    "stats_7_day_streaks": "7-Tage Streaks",
+    "stats_trade_km": "Getauschte KM",
+    "stats_caught_at_lure": "Bei Lockmodulen gefangen",
+    "stats_wayfarer_agreements": "Wayfarer Übereinstimmungen",
+    "stats_trainers_referred": "Trainer empfohlen",
+    "stats_photobombs": "Fotobomben",
+    "stats_unique_unown": "Verschiedene Icognito",
+    "stats_xl_karps": "XL Karpador",
+    "stats_xs_rats": "XS Rattfratz",
+    "stats_pikachu_caught": "Pikachu gefangen",
+    "stats_dex_gen1": "Kanto Dex",
+    "stats_dex_gen2": "Johto Dex",
+    "stats_dex_gen3": "Hoenn Dex",
+    "stats_dex_gen4": "Sinnoh Dex",
+    "stats_dex_gen5": "Einall Dex",
+    "stats_dex_gen6": "Kalos Dex",
+    "stats_dex_gen7": "Alola Dex",
+    "stats_dex_gen8": "Galar Dex",
+    "stats_caught_normal": "Normal",
+    "stats_caught_fighting": "Kampf",
+    "stats_caught_flying": "Flug",
+    "stats_caught_poison": "Gift",
+    "stats_caught_ground": "Boden",
+    "stats_caught_rock": "Gestein",
+    "stats_caught_bug": "Käfer",
+    "stats_caught_ghost": "Geist",
+    "stats_caught_steel": "Stahl",
+    "stats_caught_fire": "Feuer",
+    "stats_caught_water": "Wasser",
+    "stats_caught_grass": "Pflanze",
+    "stats_caught_electric": "Elektro",
+    "stats_caught_psychic": "Psycho",
+    "stats_caught_ice": "Eis",
+    "stats_caught_dragon": "Drache",
+    "stats_caught_dark": "Unlicht",
+    "stats_caught_fairy": "Fee"
 }
