text fixes, better errors, gym level stats

--- a/locale/german.json
+++ b/locale/german.json
@@ -36,7 +36,9 @@
     "error_no_code_set": "❌ Dieser Spieler hat noch keinen Trainercode gesetzt",
     "error_wrong_code_format": "❌ Das Format konnte ich nicht erkennen. Probier stattdessen mal `1234 1234 1234`",
     "error_name_not_scanned": "😦 Ich konnte deinen Namen leider nicht finden. Entweder warst du in letzter Zeit in keiner Arena oder du hast den Namen falsch geschrieben",
-    "error_user_not_linked": "❌ Dieser Spieler hat sich noch nicht mit einem Pokémon GO Profil gelinkt",
+    "error_user_not_linked": "❌ Dieser Spieler hat sich noch nicht mit einem Pokémon GO Account gelinkt",
+    "error_player_not_linked": "❌ Dieser Spieler hat sich noch nicht mit einem Discord Account gelinkt",
+    "error_self_not_linked": "❌ Benutze zuerst `!link [Trainername]` um dich mit einem Pokémon GO Account zu linken",
     "dot": ".",
     "stats_title": "{}'s Stats",
     "stats_placeholder": "Wähle eine Kategorie",
@@ -63,13 +65,13 @@
     "stats_hatched": "Eier ausgebrütet",
     "stats_quests": "Quests erledigt",
     "stats_trades": "Getauscht",
-    "stats_unique_stops_spun": "Einzigartige Stops",
+    "stats_unique_stops_spun": "Verschiedene Stops",
     "stats_best_friends": "Beste Freunde",
-    "stats_battles_won": "Insgesamt gewonnene Kämpfe",
-    "stats_normal_raids_won": "Normale Raids",
-    "stats_legendary_raids_won": "Legendäre Raids",
-    "stats_raids_with_friends": "Raids mit Freunden",
-    "stats_raid_achievements": "Raid Erfolge",
+    "stats_battles_won": "Insgesamt gewonnen",
+    "stats_normal_raids_won": "Normale",
+    "stats_legendary_raids_won": "Legendäre",
+    "stats_raids_with_friends": "Mit Freunden",
+    "stats_raid_achievements": "Erfolge",
     "stats_unique_raid_bosses": "Verschiedene Raidbosse",
     "stats_grunts_defeated": "Rüpel besiegt",
     "stats_giovanni_defeated": "Giovanni besiegt",
@@ -85,8 +87,8 @@
     "stats_gbl_rating": "GBL Rating",
     "stats_best_buddies": "Beste Kumpel",
     "stats_mega_evos": "Mega-Entwicklungen",
-    "stats_collections_done": "Sammler-Herausforderungen abgeschlossen",
-    "stats_unique_mega_evos": "Verschiedene Mega-Entwicklungen",
+    "stats_collections_done": "Sammler-Herausforderungen",
+    "stats_unique_mega_evos": "Verschiedene Megas",
     "stats_7_day_streaks": "7-Tage Streaks",
     "stats_trade_km": "Getauschte KM",
     "stats_caught_at_lure": "Bei Lockmodulen gefangen",
