--- a/locale/german.json
+++ b/locale/german.json
@@ -40,6 +40,7 @@
     "error_player_not_linked": "❌ Dieser Spieler hat sich noch nicht mit einem Discord Account gelinkt",
     "error_self_not_linked": "❌ Benutze zuerst `!link [Trainername]` um dich mit einem Pokémon GO Account zu linken",
     "dot": ".",
+    "stats_last_seen": "Zuletzt aktualisiert vor {}",
     "stats_title": "{}'s Stats",
     "stats_placeholder": "Wähle eine Kategorie",
     "stats_category_general": "Allgemein",
@@ -67,7 +68,7 @@
     "stats_trades": "Getauscht",
     "stats_unique_stops_spun": "Verschiedene Stops",
     "stats_best_friends": "Beste Freunde",
-    "stats_battles_won": "Insgesamt gewonnen",
+    "stats_battles_won": "Gewonnene Kämpfe",
     "stats_normal_raids_won": "Normale",
     "stats_legendary_raids_won": "Legendäre",
     "stats_raids_with_friends": "Mit Freunden",
