badges for !stats

--- a/locale/german.json
+++ b/locale/german.json
@@ -90,7 +90,7 @@
     "stats_mega_evos": "Mega-Entwicklungen",
     "stats_collections_done": "Sammler-Herausforderungen",
     "stats_unique_mega_evos": "Verschiedene Megas",
-    "stats_7_day_streaks": "7-Tage Streaks",
+    "stats_7_day_streaks": "7-Tage Serien",
     "stats_trade_km": "Getauschte KM",
     "stats_caught_at_lure": "Bei Lockmodulen gefangen",
     "stats_wayfarer_agreements": "Wayfarer Übereinstimmungen",
