--- a/locale/english.json
+++ b/locale/english.json
@@ -36,5 +36,118 @@
     "error_no_code_set": "❌ This player didn't set a trainercode yet",
     "error_wrong_code_format": "❌ I could not recognize this format. Please try `1234 1234 1234` instead",
     "error_name_not_scanned": "😦 I was not able to find your name. Either you didn't deploy any Pokémon recently or you mistyped it",
-    "error_user_not_linked": "❌ This player hasn't linked a Pokémon GO profile yet"
+    "error_user_not_linked": "❌ This user hasn't linked a Pokémon GO profile yet",
+    "error_player_not_linked": "❌ This user hasn't linked a Discord account yet",
+    "error_self_not_linked": "❌ Use `!link [trainer name]` to first link to a Pokémon GO account",
+    "error_missing_name": "❌ You have to give your trainer name! `!link [trainer name]`",
+    "days": "days",
+    "hours": "hours",
+    "minutes": "minutes",
+    "dot": ",",
+    "unlink": "✅ You're no longer linked to your Pokémon GO account",
+    "link_title": "Account Link",
+    "link_terms": "Before you can link your account, i'll have to inform you about a few things.\nAccount data can be collected in two ways: Through gyms and the friendlist.\n\n**Gyms**\nWhen you're defending a gym, your team, level, XP and won battles are saved by a bot. After you accept, anyone can view this data. Additionally, I'm going to always keep your discord level and team updated, so you'll never have to do it manually again.\n\n**Friendlist**\nAfter accepting, you're sent a bot's Pokémon GO trainercode. You can send them a friend invite to have all your in-game stats saved. These can always be queried using the `!stats` command. With `!leaderboard` you can check how you're doing compared to other local trainers.\n\nIf you don't want to be linked anymore, you can always unlink using the `!unlink` command.",
+    "link_accept": "Accept",
+    "link_deny": "Deny",
+    "link_success": "✅ You're now connected to the Pokémon GO account {}",
+    "link_denied": "👋 Maybe another time",
+    "link_botcode": "You can now send `{}` a friend invite to have even more stats saved",
+    "stats_last_seen": "Last updated {} ago",
+    "stats_title": "{}'s stats",
+    "stats_placeholder": "Choose a category",
+    "stats_category_general": "General",
+    "stats_category_general_desc": "Important stats",
+    "stats_category_battles": "Battles",
+    "stats_category_battles_desc": "Raid, PVP and gym battles",
+    "stats_category_collection": "Collections",
+    "stats_category_collection_desc": "Pokédex, caught tyoes, and specifics",
+    "stats_category_misc": "Misc",
+    "stats_category_misc_desc": "Unimportant stats",
+    "stats_title_raids": "Raids",
+    "stats_title_pvp": "PVP",
+    "stats_title_team_rocket": "Team Rocket",
+    "stats_title_gyms": "Gyms",
+    "stats_title_dex": "Pokédexes",
+    "stats_title_specific": "Specific",
+    "stats_title_types": "Caught types",
+    "stats_xp": "XP",
+    "stats_km_walked": "KM walked",
+    "stats_caught_pokemon": "Pokémon caught",
+    "stats_stops_spun": "Stops spun",
+    "stats_evolved": "Evolved",
+    "stats_hatched": "Eggs hatched",
+    "stats_quests": "Quests done",
+    "stats_trades": "Traded",
+    "stats_unique_stops_spun": "Unique Stops",
+    "stats_best_friends": "Best friends",
+    "stats_battles_won": "Battles won",
+    "stats_normal_raids_won": "Normal",
+    "stats_legendary_raids_won": "Legendary",
+    "stats_raids_with_friends": "With friends",
+    "stats_raid_achievements": "Achievements",
+    "stats_unique_raid_bosses": "Unique bosses",
+    "stats_grunts_defeated": "Grunts defeated",
+    "stats_giovanni_defeated": "Giovanni defeated",
+    "stats_purified": "Purified",
+    "stats_gym_battles_won": "Gym battles won",
+    "stats_berries_fed": "Berries fed",
+    "stats_hours_defended": "Hours defended",
+    "stats_trainings_won": "Trained",
+    "stats_league_great_won": "Great League won",
+    "stats_league_ultra_won": "Ultra League won",
+    "stats_league_master_won": "Master League won",
+    "stats_gbl_rank": "GBL Rank",
+    "stats_gbl_rating": "GBL Rating",
+    "stats_best_buddies": "Best buddies",
+    "stats_mega_evos": "Mega evolutions",
+    "stats_collections_done": "Collection challenges",
+    "stats_unique_mega_evos": "Unique Megas",
+    "stats_7_day_streaks": "7-day streaks",
+    "stats_trade_km": "Traded KM",
+    "stats_caught_at_lure": "Caught at your lures",
+    "stats_wayfarer_agreements": "Wayfarer agreements",
+    "stats_trainers_referred": "Trainer referred",
+    "stats_photobombs": "Photobombs",
+    "stats_unique_unown": "Unique Unown",
+    "stats_xl_karps": "XL Magikarp",
+    "stats_xs_rats": "XS Rattata",
+    "stats_pikachu_caught": "Pikachu caught",
+    "stats_dex_gen1": "Kanto Dex",
+    "stats_dex_gen2": "Johto Dex",
+    "stats_dex_gen3": "Hoenn Dex",
+    "stats_dex_gen4": "Sinnoh Dex",
+    "stats_dex_gen5": "Unova Dex",
+    "stats_dex_gen6": "Kalos Dex",
+    "stats_dex_gen7": "Alola Dex",
+    "stats_dex_gen8": "Galar Dex",
+    "stats_caught_normal": "Normal",
+    "stats_caught_fighting": "Fighting",
+    "stats_caught_flying": "Flying",
+    "stats_caught_poison": "Poison",
+    "stats_caught_ground": "Ground",
+    "stats_caught_rock": "Rock",
+    "stats_caught_bug": "Bug",
+    "stats_caught_ghost": "Ghost",
+    "stats_caught_steel": "Steel",
+    "stats_caught_fire": "Fire",
+    "stats_caught_water": "Water",
+    "stats_caught_grass": "Plant",
+    "stats_caught_electric": "Electric",
+    "stats_caught_psychic": "Psychic",
+    "stats_caught_ice": "Ice",
+    "stats_caught_dragon": "Dragon",
+    "stats_caught_dark": "Dark",
+    "stats_caught_fairy": "Fairy",
+    "lb_placeholder": "Choose a category",
+    "lb_category_xp": "XP",
+    "lb_category_battles_won": "Won battles",
+    "lb_category_caught_pokemon": "Caught Pokémon",
+    "lb_category_stops_spun": "Spun Pokéstops",
+    "lb_category_hatched": "Hatched eggs",
+    "lb_category_quests": "Quests",
+    "lb_category_trades": "Trades",
+    "lb_category_gbl_rank": "GBL Rank",
+    "lb_category_legendary_raids_won": "Legendary Raids",
+    "lb_category_grunts_defeated": "Defeated grunts",
+    "lb_category_unique_unown": "Unique Unown"
 }
