fix a bunch of minor stuff

--- a/locale/english.json
+++ b/locale/english.json
@@ -38,13 +38,16 @@
     "error_name_not_scanned": "😦 I was not able to find your name. Either you didn't deploy any Pokémon recently or you mistyped it",
     "error_user_not_linked": "❌ This user hasn't linked a Pokémon GO profile yet",
     "error_player_not_linked": "❌ This user hasn't linked a Discord account yet",
-    "error_self_not_linked": "❌ Use `!link [trainer name]` to first link to a Pokémon GO account",
+    "error_self_not_linked": "❌ Use `!link [trainer name]` to first link with a Pokémon GO account",
     "error_missing_name": "❌ You have to give your trainer name! `!link [trainer name]`",
+    "Page": "Page {}/{}",
     "days": "days",
     "hours": "hours",
     "minutes": "minutes",
     "dot": ",",
     "unlink": "✅ You're no longer linked to your Pokémon GO account",
+    "link_ad_label": "You want more stats?",
+    "link_ad_text": "Use `!link [trainer name]` to link with a Pokémon GO account. Afterwards you're able to befriend a bot that connects your in-game stats to Discord.",
     "link_title": "Account Link",
     "link_terms": "Before you can link your account, i'll have to inform you about a few things.\nAccount data can be collected in two ways: Through gyms and the friendlist.\n\n**Gyms**\nWhen you're defending a gym, your team, level, XP and won battles are saved by a bot. After you accept, anyone can view this data. Additionally, I'm going to always keep your discord level and team updated, so you'll never have to do it manually again.\n\n**Friendlist**\nAfter accepting, you're sent a bot's Pokémon GO trainercode. You can send them a friend invite to have all your in-game stats saved. These can always be queried using the `!stats` command. With `!leaderboard` you can check how you're doing compared to other local trainers.\n\nIf you don't want to be linked anymore, you can always unlink using the `!unlink` command.",
     "link_accept": "Accept",
@@ -52,6 +55,7 @@
     "link_success": "✅ You're now connected to the Pokémon GO account {}",
     "link_denied": "👋 Maybe another time",
     "link_botcode": "You can now send `{}` a friend invite to have even more stats saved",
+    "link_send_again": "Send code again",
     "stats_last_seen": "Last updated {} ago",
     "stats_title": "{}'s stats",
     "stats_placeholder": "Choose a category",
