--- a/locale/german.json
+++ b/locale/german.json
@@ -40,11 +40,14 @@
     "error_player_not_linked": "❌ Dieser Spieler hat sich noch nicht mit einem Discord Account gelinkt",
     "error_self_not_linked": "❌ Benutze zuerst `!link [Trainername]` um dich mit einem Pokémon GO Account zu linken",
     "error_missing_name": "❌ Du musst noch den Trainernamen angeben! `!link [Trainername]`",
+    "Page": "Seite {}/{}",
     "days": "Tagen",
     "hours": "Stunden",
     "minutes": "Minuten",
     "dot": ".",
     "unlink": "✅ Du bist nun nicht mehr mit deinem Pokémon GO Account gelinkt",
+    "link_ad_label": "Du möchtest noch mehr Stats?",
+    "link_ad_text": "Benutze `!link [Trainername]` um dich mit einem Pokémon GO Account zu linken. Daraufhin hast du die Möglichkeit, dich mit einem Bot anzufreunden, der deine Ingame Statistiken mit Discord verbindet.",
     "link_title": "Account Link",
     "link_terms": "Bevor du deinen Account linken kannst, lass mich dir noch kurz ein paar Dinge darüber erzählen.\nDaten über deinen Account können über zwei Wege gesammelt werden: Durch Arenen und durch die Freundesliste.\n\n**Arenen**\nSetzt du dich in eine Arena, werden dein Team, Trainerlevel, deine XP und gewonnenen Kämpfe durch einen Bot gespeichert. Nachdem du bestätigst, wird jeder diese Daten einsehen können. Außerdem werde ich dein Discordlevel und -team immer aktuell halten, sodass du diese nicht mehr manuell aktualisieren musst.\n\n**Freundesliste**\nNachdem du bestätigst, bekommst du den Pokémon GO-Freundecode von einem Bot. Diesem kannst du im Spiel eine Freundesanfrage schicken, woraufhin alle deine Ingame Statistiken gespeichert werden. Diese können dann jederzeit über den `!stats` Befehl abgerufen werden. Über den `!leaderboard` Befehl kannst du sehen, wie du dich im Vergleich zu anderen Spielern schlägst.\n\nHast du keine Lust mehr auf diese Funktionen, kannst du dich jederzeit mit dem `!unlink` Befehl unlinken.",
     "link_accept": "Bestätigen",
@@ -52,6 +55,7 @@
     "link_success": "✅ Du bist nun mit dem Pokémon GO Account {} verbunden",
     "link_denied": "👋 Vielleicht ein andermal",
     "link_botcode": "Du kannst nun `{}` eine Freundschaftsanfrage schicken, um noch mehr deiner Statistiken verfolgen zu können",
+    "link_send_again": "Code nochmal schicken",
     "stats_last_seen": "Zuletzt aktualisiert vor {}",
     "stats_title": "{}'s Stats",
     "stats_placeholder": "Wähle eine Kategorie",
