add unique stops to lb

--- a/locale/german.json
+++ b/locale/german.json
@@ -147,6 +147,7 @@
     "lb_category_battles_won": "Gewonnene Kämpfe",
     "lb_category_caught_pokemon": "Gefangene Pokémon",
     "lb_category_stops_spun": "Gedrehte Pokéstops",
+    "lb_category_unique_stops": "Verschiedene Stops",
     "lb_category_hatched": "Ausgebrütete Eier",
     "lb_category_quests": "Quests",
     "lb_category_trades": "Tausche",
