proper command error handling

--- a/locale/english.json
+++ b/locale/english.json
@@ -26,7 +26,7 @@
     "setup_name": "✅ Your name is now {}",
     "setup_saved_code": "✅ Your trainercode was saved",
     "setup_team": "✅ You're now part of team {}",
-    "error_invalid_time": "❌ I couldn't find a valid time in your message",
+    "error_invalid_time": "❌ I couldn't find a valid time",
     "error_raid_past": "❌ You can't schedule a raid in the past",
     "error_max_lvl": "❌ The max level is 50",
     "error_raid_exists": "❌ This raid seems to already have been scheduled",
@@ -40,6 +40,8 @@
     "error_player_not_linked": "❌ This user hasn't linked a Discord account yet",
     "error_self_not_linked": "❌ Use `!link [trainer name]` to first link with a Pokémon GO account",
     "error_missing_name": "❌ You have to give your trainer name! `!link [trainer name]`",
+    "error_wrong_channel": "❌ Please use this command in a raid channel",
+    "error_wrong_gym_name": "❌ You have to select a correct gym name",
     "Page": "Page {}/{}",
     "days": "days",
     "hours": "hours",
