--- a/locale/german.json
+++ b/locale/german.json
@@ -26,7 +26,7 @@
     "setup_name": "✅ Dein Name ist jetzt {}",
     "setup_saved_code": "✅ Dein Trainercode ist nun gespeichert",
     "setup_team": "✅ Du bist jetzt in Team {}",
-    "error_invalid_time": "❌ Ich konnte deiner Nachricht keine gültige Zeit entnehmen",
+    "error_invalid_time": "❌ Ich konnte keine richtige Zeit erkennen",
     "error_raid_past": "❌ Du kannst keinen Raid für die Vergangenheit ansetzen",
     "error_max_lvl": "❌ Das Maximallevel ist 50",
     "error_raid_exists": "❌ Dieser Raid scheint schon angesetzt zu sein",
@@ -40,6 +40,8 @@
     "error_player_not_linked": "❌ Dieser Spieler hat sich noch nicht mit einem Discord Account gelinkt",
     "error_self_not_linked": "❌ Benutze zuerst `!link [Trainername]` um dich mit einem Pokémon GO Account zu linken",
     "error_missing_name": "❌ Du musst noch den Trainernamen angeben! `!link [Trainername]`",
+    "error_wrong_channel": "❌ Benutze den Befehl bitte in einem Raidkanal",
+    "error_wrong_gym_name": "❌ Du musst einen korrekten Arenanamen auswählen",
     "Page": "Seite {}/{}",
     "days": "Tagen",
     "hours": "Stunden",
