localization, better cog loading

--- a/locale/english.json
+++ b/locale/english.json
@@ -10,6 +10,27 @@
     "Scheduled_by": "Scheduled by {}",
     "Start": "Start",
     "Total": "Total",
+    "level_egg": "Level {} Egg",
+    "mega_egg": "Mega Egg",
+    "context_stats_desc": "Show this player's stats",
+    "command_stats_desc": "Show a linked player's stats",
+    "command_stats_trainer_desc": "Leave empty to view your own stats",
+    "command_link_desc": "Link yourself with a Pokémon GO account",
+    "command_link_name_desc": "Your trainer name",
+    "command_unlink_desc": "Unlink your Pokémon GO account",
+    "command_leaderboard_desc": "Show a leaderboard of all linked players",
+    "command_raid_desc": "Start a Raid",
+    "command_raid_gym": "gym",
+    "command_raid_gym_desc": "The Gym",
+    "command_raid_time": "start",
+    "command_raid_time_desc": "When the Raid should be played",
+    "command_name_desc": "Set your Discord name",
+    "command_name_name_desc": "Your name",
+    "command_level_desc": "Set your trainer level",
+    "command_level_level_desc": "Your trainer level",
+    "command_levelup_desc": "Increase your trainer level by 1",
+    "command_team_desc": "Set your team",
+    "command_team_team_desc": "Choose your team",
     "choice_x_gyms": "{} Gyms were found",
     "choice_please_choose": "Please choose the one you want to schedule the raid at.",
     "notify_role_name": "raidnotifications",
