--- a/locale/german.json
+++ b/locale/german.json
@@ -10,6 +10,27 @@
     "Scheduled_by": "Angesetzt von {}",
     "Start": "Start",
     "Total": "Insgesamt",
+    "level_egg": "Level {} Ei",
+    "mega_egg": "Mega Ei",
+    "context_stats_desc": "Zeigt die Stats von diesem Spieler",
+    "command_stats_desc": "Zeigt die Stats von einem gelinkten Spieler",
+    "command_stats_trainer_desc": "Leer lassen, um deine eigenen Stats zu zeigen",
+    "command_link_desc": "Linkt dich mit deinem Pokémon GO Account",
+    "command_link_name_desc": "Dein Trainername",
+    "command_unlink_desc": "Unlinkt dich von deinem Pokémon GO Account",
+    "command_leaderboard_desc": "Zeigt eine Rangliste mit allen gelinkten Spielern",
+    "command_raid_desc": "Setzt einen Raid an",
+    "command_raid_gym": "arena",
+    "command_raid_gym_desc": "Die Arena",
+    "command_raid_time": "zeit",
+    "command_raid_time_desc": "Wann der Raid gespielt werden soll",
+    "command_name_desc": "Setzt deinen Discord Namen",
+    "command_name_name_desc": "Dein Name",
+    "command_level_desc": "Setzt dein Trainerlevel",
+    "command_level_level_desc": "Dein Trainerlevel",
+    "command_levelup_desc": "Erhöht dein Trainerlevel um 1",
+    "command_team_desc": "Setzt dein Team",
+    "command_team_team_desc": "Wähle dein Team",
     "choice_x_gyms": "Es wurden {} Arenen gefunden",
     "choice_please_choose": "Bitte wähle die, an der der Raid stattfinden soll.",
     "notify_role_name": "raidnachrichten",
