--- a/locale/german.json
+++ b/locale/german.json
@@ -10,8 +10,10 @@
     "Scheduled_by": "Angesetzt von {}",
     "Start": "Start",
     "Total": "Insgesamt",
+    "level_": "Level {}",
     "level_egg": "Level {} Ei",
     "mega_egg": "Mega Ei",
+    "Help": "Hilfe",
     "context_stats_desc": "Zeigt die Stats von diesem Spieler",
     "command_stats_desc": "Zeigt die Stats von einem gelinkten Spieler",
     "command_stats_trainer_desc": "Leer lassen, um deine eigenen Stats zu zeigen",
@@ -47,6 +49,32 @@
     "setup_name": "✅ Dein Name ist jetzt {}",
     "setup_saved_code": "✅ Dein Trainercode ist nun gespeichert",
     "setup_team": "✅ Du bist jetzt in Team {}",
+    "dmap": "Raid Map",
+    "dmap_jump_to_an_area": "Springe zu einem Standort",
+    "dmap_open": "Map öffnen",
+    "dmap_android": "⚠️ Aufgrund eines Discord Bugs funktioniert die Map auf Android nicht richtig",
+    "dmap_back": "Zurück",
+    "dmap_select_levels": "Wähle, welche Raid Level gezeigt werden",
+    "dmap_show_level": "Zeige Level {} Raids",
+    "Settings": "Einstellungen",
+    "dmap_style": "Map Style: **{}**",
+    "dmap_icons": "Icons: **{}**",
+    "dmap_icon_size": "Icon Größe: **{}x**",
+    "dmap_select_style": "Wähle einen Map Style",
+    "dmap_style_option": "Map Style: {}",
+    "dmap_select_iconset": "Wähle die Icons",
+    "dmap_iconset_option": "Icons: {}",
+    "dmap_bigger_icons": "Größere Icons",
+    "dmap_smaller_icons": "Kleinere Icons",
+    "dmap_gym_": "Arena: **{}**",
+    "dmap_start_": "Start: **{}**",
+    "dmap_start_raid": "Raid ansetzen",
+    "dmap_select_raid": "Wähle einen Raid",
+    "dmap_select_time": "Wähle eine Zeit",
+    "dmap_start": "Starten",
+    "dmap_error": "Sorry, die Map konnte nicht geladen werden",
+    "dmap_marker_limit": "Es konnten nicht alle Raids angezeigt werden. Zoome mehr hinein oder wähle weniger Level aus",
+    "dmap_speed": "Speed: {}",
     "error_invalid_time": "❌ Ich konnte keine richtige Zeit erkennen",
     "error_raid_past": "❌ Du kannst keinen Raid für die Vergangenheit ansetzen",
     "error_max_lvl": "❌ Das Maximallevel ist 50",
