--- a/locale/german.json
+++ b/locale/german.json
@@ -20,7 +20,7 @@
     "command_link_desc": "Linkt dich mit deinem Pokémon GO Account",
     "command_link_name_desc": "Dein Trainername",
     "command_unlink_desc": "Unlinkt dich von deinem Pokémon GO Account",
-    "command_leaderboard_desc": "Zeigt eine Rangliste mit allen gelinkten Spielern",
+    "command_lb_desc": "Zeigt eine Rangliste mit allen gelinkten Spielern",
     "command_raid_desc": "Setzt einen Raid an",
     "command_raid_gym": "arena",
     "command_raid_gym_desc": "Die Arena",
@@ -52,7 +52,7 @@
     "dmap": "Raid Map",
     "dmap_jump_to_an_area": "Springe zu einem Standort",
     "dmap_open": "Map öffnen",
-    "dmap_android": "⚠️ Aufgrund eines Discord Bugs funktioniert die Map auf Android nicht richtig",
+    "dmap_android": "⚠️ Aufgrund eines Discord Bugs funktioniert die Map unter Android nicht richtig",
     "dmap_back": "Zurück",
     "dmap_select_levels": "Wähle, welche Raid Level gezeigt werden",
     "dmap_show_level": "Zeige Level {} Raids",
