--- a/locale/english.json
+++ b/locale/english.json
@@ -49,6 +49,32 @@
     "setup_name": "✅ Your name is now {}",
     "setup_saved_code": "✅ Your trainercode was saved",
     "setup_team": "✅ You're now part of team {}",
+    "dmap": "Raid Map",
+    "dmap_jump_to_an_area": "Jump to a location",
+    "dmap_open": "Open Map",
+    "dmap_android": "⚠️ Due to a Discord bug, the Map doesn't properly function on Android",
+    "dmap_back": "Back",
+    "dmap_select_levels": "Choose Raid levels zu display",
+    "dmap_show_level": "Show level {} Raids",
+    "Settings": "Settings",
+    "dmap_style": "Map Style: **{}**",
+    "dmap_icons": "Icons: **{}**",
+    "dmap_icon_size": "Icon size: **{}x**",
+    "dmap_select_style": "Choose a map style",
+    "dmap_style_option": "Map Style: {}",
+    "dmap_select_iconset": "Choose icons",
+    "dmap_iconset_option": "Icons: {}",
+    "dmap_bigger_icons": "Increase icon size",
+    "dmap_smaller_icons": "Decrease icon size",
+    "dmap_gym_": "Gym: **{}**",
+    "dmap_start_": "Start: **{}**",
+    "dmap_start_raid": "Start Raid",
+    "dmap_select_raid": "Select a Raid",
+    "dmap_select_time": "Select a start time",
+    "dmap_start": "Start",
+    "dmap_error": "Sorry, there was an error loading the map",
+    "dmap_marker_limit": "The raid limit has been hit. Zoom in more or select less levels",
+    "dmap_speed": "Speed: {}",
     "error_invalid_time": "❌ I couldn't find a valid time",
     "error_raid_past": "❌ You can't schedule a raid in the past",
     "error_max_lvl": "❌ The max level is 50",
@@ -65,7 +91,6 @@
     "error_missing_name": "❌ You have to give your trainer name! `!link [trainer name]`",
     "error_wrong_channel": "❌ Please use this command in a raid channel",
     "error_wrong_gym_name": "❌ You have to select a correct gym name",
-
     "Page": "Page {}/{}",
     "days": "days",
     "hours": "hours",
