--- a/locale/german.json
+++ b/locale/german.json
@@ -75,6 +75,7 @@
     "dmap_error": "Sorry, die Map konnte nicht geladen werden",
     "dmap_marker_limit": "Es konnten nicht alle Raids angezeigt werden. Zoome mehr hinein oder wähle weniger Level aus",
     "dmap_speed": "Speed: {}",
+    "dmap_reset_settings": "Einstellungen zurücksetzen",
     "error_invalid_time": "❌ Ich konnte keine richtige Zeit erkennen",
     "error_raid_past": "❌ Du kannst keinen Raid für die Vergangenheit ansetzen",
     "error_max_lvl": "❌ Das Maximallevel ist 50",
