--- a/locale/english.json
+++ b/locale/english.json
@@ -14,6 +14,7 @@
     "level_egg": "Level {} Egg",
     "mega_egg": "Mega Egg",
     "Help": "Help",
+    "shadow": "Shadow",
     "context_stats_desc": "Show this player's stats",
     "command_stats_desc": "Show a linked player's stats",
     "command_stats_trainer_desc": "Leave empty to view your own stats",
