difficulty, first pb integration

--- a/locale/english.json
+++ b/locale/english.json
@@ -15,6 +15,11 @@
     "mega_egg": "Mega Egg",
     "Help": "Help",
     "shadow": "Shadow",
+    "difficulty_1": "🟥 Impossible",
+    "difficulty_2": "🟧 Hard",
+    "difficulty_3": "🟨 Medium",
+    "difficulty_4": "🟩 Easy",
+    "difficulty_5": "🟦 Very easy",
     "context_stats_desc": "Show this player's stats",
     "command_stats_desc": "Show a linked player's stats",
     "command_stats_trainer_desc": "Leave empty to view your own stats",
