--- a/locale/german.json
+++ b/locale/german.json
@@ -15,6 +15,11 @@
     "mega_egg": "Mega Ei",
     "Help": "Hilfe",
     "shadow": "Crypto",
+    "difficulty_1": "🟥 Nicht möglich",
+    "difficulty_2": "🟧 Schwer",
+    "difficulty_3": "🟨 Medium",
+    "difficulty_4": "🟩 Einfach",
+    "difficulty_5": "🟦 Sehr einfach",
     "context_stats_desc": "Zeigt die Stats von diesem Spieler",
     "command_stats_desc": "Zeigt die Stats von einem gelinkten Spieler",
     "command_stats_trainer_desc": "Leer lassen, um deine eigenen Stats zu zeigen",
