--- a/locale/english.json
+++ b/locale/english.json
@@ -82,6 +82,7 @@
     "dmap_marker_limit": "The raid limit has been hit. Zoom in more or select less levels",
     "dmap_speed": "Speed: {}",
     "dmap_reset_settings": "Reset settings",
+    "error_pokebattler_not_loaded": "❌ Couldn't load detailed data. Plase try again or contact an admin",
     "error_invalid_time": "❌ I couldn't find a valid time",
     "error_raid_past": "❌ You can't schedule a raid in the past",
     "error_max_lvl": "❌ The max level is 50",
