--- a/locale/english.json
+++ b/locale/english.json
@@ -20,6 +20,15 @@
     "difficulty_3": "🟨 Medium",
     "difficulty_4": "🟩 Easy",
     "difficulty_5": "🟦 Very easy",
+    "boss_details": "Pokémon Details",
+    "quick_moves": "Quick moves",
+    "charge_moves": "Charge moves",
+    "catch_cp": "Catch CP",
+    "boosted_cp": "Boosted CP",
+    "loading": "Give me a second...",
+    "raid_guide": "{name}'s types are {types}, which makes it weak to {weak}. You'll need at least **{min} players**, with **{max}** you won't have any trouble.\n\n**Best counters**",
+    "no_megas_cryptos": "Excluding Mega Evolutions and Shadow Pokémon",
+    "more_on_pokebattler": "More on Pokebattler",
     "context_stats_desc": "Show this player's stats",
     "command_stats_desc": "Show a linked player's stats",
     "command_stats_trainer_desc": "Leave empty to view your own stats",
