--- a/locale/german.json
+++ b/locale/german.json
@@ -20,6 +20,15 @@
     "difficulty_3": "🟨 Medium",
     "difficulty_4": "🟩 Einfach",
     "difficulty_5": "🟦 Sehr einfach",
+    "boss_details": "Mehr Infos zum Pokémon",
+    "quick_moves": "Sofortattacken",
+    "charge_moves": "Ladeattacken",
+    "catch_cp": "Fang-WP",
+    "boosted_cp": "Geboostete WP",
+    "loading": "Einen Moment bitte...",
+    "raid_guide": "{name} ist vom Typ {types}, somit ist er besonders anfällig gegen {weak}. Man benötigt zumindest **{min} Spieler**, mit **{max}** gibt es keine Probleme.\n\n**Beste Konter**",
+    "no_megas_cryptos": "Ohne Mega-Entwicklungen und Crypto-Pokémon",
+    "more_on_pokebattler": "Mehr auf Pokebattler",
     "context_stats_desc": "Zeigt die Stats von diesem Spieler",
     "command_stats_desc": "Zeigt die Stats von einem gelinkten Spieler",
     "command_stats_trainer_desc": "Leer lassen, um deine eigenen Stats zu zeigen",
