ultra beast support

--- a/locale/english.json
+++ b/locale/english.json
@@ -11,8 +11,14 @@
     "Start": "Start",
     "Total": "Total",
     "level_": "Level {}",
-    "level_egg": "Level {} Egg",
-    "mega_egg": "Mega Egg",
+    "level_egg": "Level {} Raid",
+    "1_egg": "Pink Egg",
+    "3_egg": "Yellow Egg",
+    "5_egg": "Legendary Raid",
+    "6_egg": "Mega Raid",
+    "7_egg": "Legendary Mega Raid",
+    "8_egg": "Ultra Beast Raid",
+    "0_egg": "Raid",
     "Help": "Help",
     "shadow": "Shadow",
     "difficulty_1": "🟥 Impossible",
