--- a/locale/german.json
+++ b/locale/german.json
@@ -11,8 +11,14 @@
     "Start": "Start",
     "Total": "Insgesamt",
     "level_": "Level {}",
-    "level_egg": "Level {} Ei",
-    "mega_egg": "Mega Ei",
+    "level_egg": "Level {} Raid",
+    "1_egg": "Pinkes Ei",
+    "3_egg": "Gelbes Ei",
+    "5_egg": "Legendärer Raid",
+    "6_egg": "Mega-Raid",
+    "7_egg": "Legendärer Mega-Raid",
+    "8_egg": "Ultrabestien-Raid",
+    "0_egg": "Raid",
     "Help": "Hilfe",
     "shadow": "Crypto",
     "difficulty_1": "🟥 Nicht möglich",
